--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "main": "dist/@youwol/fv-widgets.js",
   "types": "src/index.ts",
   "scripts": {
+    "build-css-youwol": "sass ./src/sass/style.youwol.scss ./dist/assets/styles/style.youwol.css",
+    "build-css-gg-default": "sass ./src/sass/style.gg-default.scss ./dist/assets/styles/style.gg-default.css",
+    "build-css-gg-dark": "sass ./src/sass/style.gg-dark.scss ./dist/assets/styles/style.gg-dark.css",
+    "build-css": "yarn build-css-youwol && yarn build-css-gg-default && yarn build-css-gg-dark",
+    "build:prod": "webpack --mode production && yarn build-css",
+    "build:dev": "webpack --mode development && yarn build-css",
     "build": "yarn build:dev",
-    "build:dev": "webpack --mode development",
-    "build:prod": "webpack --mode production",
-    "test": "jest -c ./jest.config.js --rootDir .",
-    "test-coverage": "jest -c ./jest.config.js --rootDir . --collect-coverage --collectCoverageFrom=./src/lib/**/*.ts --coverageDirectory=./coverage/$TARGET --runInBand",
-    "publish-npm-public": "yarn build:prod && yarn test-coverage && yarn publish --access public"
+    "publish-npm-public": "yarn build:prod && yarn publish --access public",
+    "test": "jest -c ./jest.config.js --rootDir ."
   },
   "repository": {
     "type": "git",
