:arrow_up: package.json=>add flux-view & sass

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@youwol/flux-view":"0.x"
   },
   "devDependencies": {
+    "@youwol/flux-view":"0.x",
+    "sass": "1.32.5",
     "awesome-typescript-loader": "5.2.1",
     "rxjs": "6.x",
     "rxjs-spy": "7.5.3",
