--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/youwol/fv-widgets"
   },
   "dependencies": {},
   "peerDependencies": {
