--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "view",
     "widgets"
   ],
-  "version": "0.1.1",
+  "version": "0.1.2-wip",
   "description": "Flux-view based widgets collection",
   "author": "Guillaume Reinisch",
   "license": "MIT",
